# osprean-cecopal-virtual

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  prompt.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_01_0000-0001_initial.py  2026_06_04_0000-0002_cecovi_core.py  2026_06_04_0100-0003_usuario_temporal_telefono.py  2026_06_04_0200-0004_seguridad_y_dedupe.py  2026_06_04_0300-0005_direccion.py  2026_06_04_0400-0006_sanitario.py  2026_06_04_0500-0007_logistica.py  2026_06_04_0600-0008_campo.py  2026_06_04_0700-0009_gabinete.py  2026_06_04_0800-0010_evacuacion_y_gab_fk.py  2026_06_23_0000-0011_credenciales_master_backup.py  2026_06_23_0100-0012_tareas_operativas.py  2026_06_23_0200-0013_notificaciones.py  2026_06_23_0300-0014_informe_pdf.py  2026_07_03_0000-0015_organigrama_png.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  rbac.py  tenancy.py
backend/app/api/: health.py  router.py
backend/app/core/: audit.py  credenciales.py  email.py  exceptions.py  logging.py  permissions.py  roles.py  security.py
backend/app/models/: __init__.py  cecovi_campo.py  cecovi_credencial.py  cecovi_direccion.py  cecovi_emergencia.py  cecovi_gabinete.py  cecovi_log.py  cecovi_logistica.py  cecovi_notificacion.py  cecovi_rol_seleccion.py  cecovi_sanitario.py  cecovi_seguridad.py  cecovi_sesion.py  cecovi_tarea.py  cecovi_usuario_temporal.py  item.py  user.py
backend/app/repositories/: comacon_resource_repository.py  credencial_repository.py  emergencia_repository.py  item_repository.py  log_repository.py  operativo_repository.py  rol_seleccion_repository.py  seguridad_repository.py  user_repository.py  usuario_temporal_repository.py
backend/tests/: conftest.py
(+264 files in other folders)
